<resources>
    <string name="app_name">Thousands of courses</string>
    <string name="main_screen">Главная</string>
    <string name="favorites_screen">Избранное</string>
    <string name="account_screen">Аккаунт</string>
    <string name="login_via_vk">Войти через VK</string>
    <string name="login_via_ok">Войти через OK</string>
    <string name="login_screen_name">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="no_account">Нету аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="example_email">example@gmail.com</string>
    <string name="enter_password">Введите пароль</string>
    <string name="vk_url">https://vk.com/</string>
    <string name="ok_url">https://ok.ru/</string>
    <string name="course_image">Изображение курса</string>
    <string name="is_course_favorite">Является ли курс избранным</string>
    <string name="star">Звезда</string>
    <string name="more">Подробнее</string>
    <string name="search_courses">Search courses…</string>
    <string name="course_filter">Фильтр курсов</string>
    <string name="by_date_added">По дате добавления</string>
    <string name="sorting">Сортировка</string>
    <string name="empty">Пусто</string>
    <string name="course_loading_error">Ошибка загрузки курсов: %1$s</string>
    <string name="loading_courses">Загрузка курсов…</string>
</resources>