<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    tools:context=".presentation.screens.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_name"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScreenName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurfaceVariant"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textColorHint="?attr/android:textColorHint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurfaceVariant"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textColorHint="?attr/android:textColorHint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/login_screen_name"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPasswordContainer" />

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_account"
            android:textColor="?attr/colorOnBackground"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tvRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/registration"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvNoAccount"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoAccount" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="?attr/colorOutline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <ImageView
            android:id="@+id/btnVK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/login_via_vk"
            android:src="@drawable/ic_button_vk"
            app:layout_constraintEnd_toStartOf="@id/btnOK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivider" />

        <ImageView
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/login_via_ok"
            android:src="@drawable/ic_button_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnVK"
            app:layout_constraintTop_toBottomOf="@id/viewDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>