<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <ImageView
            android:id="@+id/ivCourseImage"
            android:layout_width="0dp"
            android:layout_height="114dp"
            android:contentDescription="@string/course_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/course_image" />

        <ImageView
            android:id="@+id/btnIsFavorite"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_glass_background"
            android:contentDescription="@string/is_course_favorite"
            android:padding="7.5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_not_favorite"
            app:layout_constraintEnd_toEndOf="@id/ivCourseImage"
            app:layout_constraintTop_toTopOf="@id/ivCourseImage" />

        <LinearLayout
            android:id="@+id/llRatingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_glass_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toBottomOf="@id/ivCourseImage"
            app:layout_constraintStart_toStartOf="@id/ivCourseImage">

            <ImageView
                android:id="@+id/ivRatingStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="?attr/colorOnSurface"
                android:textSize="12sp"
                tools:text="3.9" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_glass_background"
            android:fontFamily="sans-serif"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/ivCourseImage"
            app:layout_constraintStart_toEndOf="@id/llRatingCard"
            tools:text="10 Сентября 2024" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCourseImage"
            tools:text="3D-дженералист" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:textColor="?attr/colorOnSurfaceInverse"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="Освой профессию 3D-дженералиста и стань универсальным специалистом, который умеет создавать 3D-модели, текстуры и анимации." />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:text="12 000 ₽" />

        <LinearLayout
            android:id="@+id/btnMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toTopOf="@id/tvPrice"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/more"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/more"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_right_short" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>